fix: fix env variabled

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-NAME= dashnami
-USER= dashnamiuser
-PASSWORD= admin
-HOST= localhost
-PORT= 
+DB_NAME= dashnami
+DB_USER= dashnamiuser
+DB_PASSWORD= admin
+DB_HOST= localhost
+DB_PORT= 5432
