add deploy script

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
             "src": "/(.*)",
             "dest": "backend/wsgi.py"
         }
-    ]
+    ],
+    "hooks": {
+        "build": "sh deploy.sh"
+      }
 }
