--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,6 @@
             "dest": "backend/wsgi.py"
         }
     ],
-    "hooks": {
-        "build": "sh deploy.sh"
-      }
+    "buildCommand": "sh deploy.sh"
+
 }
