--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,24 @@
 {
-    "builds": [{
+    "version": 2,
+    "builds": [
+      {
         "src": "backend/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "backend/wsgi.py"
-        }
+      },
+      {
+        "src": "deploy.sh",
+        "use": "@vercel/static"
+      }
     ],
-    "buildCommand": "pip install -r requirements.txt && python manage.py makemigrations && python manage.py migrate"
-
-}
+    "routes": [
+      {
+        "src": "/staticfiles/(.*)",
+        "dest": "/staticfiles/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "backend/wsgi.py"
+      }
+    ]
+  }
