--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
         "src": "backend/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        
       },
       {
         "src": "deploy.sh",
@@ -20,5 +21,6 @@
         "src": "/(.*)",
         "dest": "backend/wsgi.py"
       }
-    ]
+    ],
+    "buildCommand":" echo 'hello' "
   }
