--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,10 @@
       },
       {
         "src": "deploy.sh",
-        "use": "@vercel/static"
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
       }
     ],
     "routes": [
