fix deploy file

--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,8 @@
       },
       {
         "src": "deploy.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
+        "use": "@vercel/static-build"
+       
       }
     ],
     "routes": [
