--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,10 @@
       },
       {
         "src": "deploy.sh",
-        "use": "@vercel/static-build"
-       
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "backend/static"
+        }
       }
     ],
     "routes": [
